# scolta-django

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: README.md
example/blog/: apps.py  models.py  views.py
example/blog/management/commands/: seed_demo.py
example/blog/migrations/: 0001_initial.py
example/demo/: settings.py  urls.py
example/templates/: search.html
src/scolta_django/: __init__.py  ai.py  amazee.py  amazee_views.py  apps.py  cache.py  conf.py  content_source.py  http.py  models.py  searchable.py  signals.py  staticfiles.py  tasks.py  urls.py  views.py  wagtail_hooks.py
src/scolta_django/management/commands/: scolta_amazee_provision.py  scolta_build.py
src/scolta_django/migrations/: 0001_initial.py  0002_amazee.py
src/scolta_django/templates/scolta_django/: amazee_settings.html
src/scolta_django/templatetags/: scolta.py
src/scolta_django/wagtail/: __init__.py
tests/: browser_urls.py  conftest.py  settings.py  test_adapter.py  test_amazee_django.py  test_amazee_views.py  test_debounce.py  test_search_browser.py  test_templatetags.py  test_wagtail.py  urls.py  urls_admin.py
tests/testapp/: __init__.py  models.py
