[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scolta-django"
version = "1.0.4.dev0"
description = "Scolta AI Search for Django — zero-infrastructure AI search with Pagefind"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tag1 Consulting", email = "info@tag1.com" }]
keywords = ["django", "search", "pagefind", "ai", "scolta", "wagtail"]

dependencies = [
    "Django>=4.2",
    "scolta",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.5",
]

[tool.uv.sources]
scolta = { path = "../scolta-python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/scolta_django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
