[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scolta-django"
dynamic = ["version"]
description = "Scolta AI Search for Django — zero-infrastructure AI search with Pagefind"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tag1 Consulting", email = "info@tag1.com" }]
keywords = ["django", "search", "pagefind", "ai", "scolta", "wagtail"]

dependencies = [
    "Django>=4.2",
    "scolta>=1.0.0",
]

[project.optional-dependencies]
# Optional Wagtail integration (auto-loaded when installed).
wagtail = ["wagtail>=5.2"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.5",
    "wagtail>=5.2",
]

[tool.uv.sources]
scolta = { path = "../scolta-python", editable = true }

# Single-source the version from __init__.py so the package metadata and
# scolta_django.__version__ can never drift again.
[tool.hatch.version]
path = "src/scolta_django/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/scolta_django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RET", "RUF"]
# line-length is enforced for code by `ruff format` (CI runs --check). E501
# stays off for the long string literals the formatter deliberately leaves
# alone, mirroring scolta-python's posture.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Django migration boilerplate (dependencies/operations class attributes).
"**/migrations/*" = ["RUF012"]
